--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
@@ -23,14 +25,18 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "^0.18.12",
     "react-navigation": "^4.4.4",
     "react-navigation-material-bottom-tabs": "^2.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "customize-cra": "^1.0.0",
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.2.6",
     "typescript": "^4.6.3"
   },
